--- a/my-project2/frontend/src/index.html
+++ b/my-project2/frontend/src/index.html
@@ -17,7 +17,7 @@
   <meta name="apple-mobile-web-app-title" content="App Title">
 
   <!-- 아이콘 설정 -->
-  <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="/assets/icons/app-icon.png">
 
 </head>
 <body class="mat-typography">
