--- a/my-project2/frontend/src/index.html
+++ b/my-project2/frontend/src/index.html
@@ -20,7 +20,7 @@
   <link rel="apple-touch-icon" href="/assets/icons/app-icon.png">
 
 </head>
-<body class="mat-typography">
+<body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
